# cplusplus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  make_icon.py  vcpkg.json
cmake/: FindTALib.cmake
resources/: app.rc
src/: AiAssistantWidget.cpp  AiAssistantWidget.h  AiChatClient.cpp  AiChatClient.h  AiConfig.cpp  AiConfig.h  AnalysisWidget.cpp  AnalysisWidget.h  Candle.h  CandleChart.cpp  CandleChart.h  CollapsiblePanel.cpp  CollapsiblePanel.h  Indicators.cpp  Indicators.h  MainWindow.cpp  MainWindow.h  MarketPanel.cpp  MarketPanel.h  PerfSincePanel.cpp  PerfSincePanel.h  PerfYearPanel.cpp  PerfYearPanel.h  PerformanceChart.cpp  PerformanceChart.h  PortfolioAnalysisWidget.cpp  PortfolioAnalysisWidget.h  PortfolioDb.cpp  PortfolioDb.h  PortfolioWidget.cpp  PortfolioWidget.h  RebalanceDialog.cpp  RebalanceDialog.h  RiskWidget.cpp  RiskWidget.h  RsiChart.cpp  RsiChart.h  SymbolPicker.cpp  SymbolPicker.h  SymbolSearchClient.cpp  (+8 more)
